--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,13 +10,14 @@
             "name": "Debug J-Link",
             "cwd": "${workspaceRoot}",
             "executable": "${workspaceRoot}/Output/Debug/Exe/Ws_project.elf",
+            // "serverpath": "/opt/SEGGER/JLink/JLinkGDBServerCLExe",
             "serverpath": "C:/Program Files (x86)/SEGGER/JLink/JLinkGDBServerCL.exe",
             "servertype": "jlink",
             "device": "STM32F407VE",
             "interface": "swd",
             "serialNumber": "", //If you have more than one J-Link probe, add the serial number here.
             // "runToEntryPoint": "main",
-            "svdFile": "${workspaceRoot}//Svd//STM32F407.svd"
+            "svdFile": "${workspaceRoot}/Svd/STM32F407.svd"
             // "debuggerArgs": ["-timeout 5000"]
             //"preLaunchTask": "Build: debug",
             // "showDevDebugOutput":"parsed",
