--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cortex-debug.armToolchainPath.windows": "C:/Program Files (x86)/GNU Tools ARM Embedded/8 2018-q4-major/bin/",
-    "cortex-debug.armToolchainPath.linux": "/usr/bin"
+    "cortex-debug.armToolchainPath.linux": "/usr/bin",
+    "ses_project":"Ws_project"
 }
