test: Added debug task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,6 +46,22 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"type": "shell",
+			"label": "Debug: Run RTT",
+			"command": "wt",
+			"args": [
+				"JLinkRTTClient"
+			],
+			"presentation": {
+				"reveal": "never",
+				"echo": true
+			},
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		}
 	]
 }
